# spar-cpp

./: CMakeLists.txt  README.md  spar.txt
src/: multistreamfile.cpp  multistreamfile.h  multistreamfile_test.cpp  scanner.cpp  scanner.h  spar.cpp  spar_analyzer.cpp  sparlib.cpp  sparlib.h  test_multistream.cpp  writer_test.cpp
